cmsapi/src/main/java/com/example/cmsapi/errors/handlers/CustomAuthenticationEntryPoint.java
package com.example.cmsapi.errors.handlers;

import com.example.cmsapi.errors.responses.ErrorResponse;
import jakarta.servlet.http.HttpServletRequest;
import jakarta.servlet.http.HttpServletResponse;
import org.springframework.security.core.AuthenticationException;
import org.springframework.security.web.AuthenticationEntryPoint;
import org.springframework.stereotype.Component;

import java.io.IOException;

@Component
public class CustomAuthenticationEntryPoint implements AuthenticationEntryPoint {

    @Override
    public void commence(HttpServletRequest request, HttpServletResponse response,
                         AuthenticationException authException) throws IOException {
        response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
        response.setContentType("application/json");
        response.getWriter().write("{\"error\": \"UNAUTHORIZED\", \"message\": \"You are not authorized to access this resource.\"}");
        response.getWriter().flush();
    }
}
